--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ body,
   font-family: "Roboto", sans-serif;
   @apply text-text-color;
 }
+
+.common-product-style {
+  @apply text-salat-10 border px-4 py-2 min-w-[143px] text-center font-normal text-lg;
+
+  /* &:hover {
+    @apply bg-salat-10 text-salat-50 ;
+  } */
+}
 link {
   text-decoration: none;
   background-color: #cada97;
