--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,15 @@ body,
 link {
   text-decoration: none;
   background-color: #cada97;
+  
 }
 
 .hover-gradient:hover {
   background: linear-gradient(to right,  #97C20B, #536614);
+  /* background: linear-gradient(to right,  #8bdfb450, #0092470f); */
   border: none;
   color: white;
+  transition: transform 0.3s ease;
 }
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
