--- a/src/index.css
+++ b/src/index.css
@@ -23,22 +23,22 @@ body,
 link {
   text-decoration: none;
   background-color: #cada97;
-  background-color: #781d18
+  background-color: #97241e
   
 }
 
 .hover-gradient:hover {
   border: none;
   color: #ffffff;
-  /* opacity: 1; */
   transition: 250ms ease-in-out; 
-
- 
 }
 
+/* .hover-color:hover{
+  transition: 550ms ease-in-out; 
+} */
 .not-hovered{
   opacity: 0;
-   transition: 250ms ease; 
+  transition: 250ms ease-in-out; 
 }
 .hovered{
   opacity: 1;
@@ -49,74 +49,31 @@ link {
   transition: 250ms ease-in-out; 
 }
 .not-rotate {
-  transform: rotate(0deg)  scale(1);;
+  transform: rotate(0deg)  scale(1);
+  transition: 250ms ease-in-out;
 
 }
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.scaled-logo{
+  width: 130px;
+  height: 130px;
+  transform: scale(1);
+  transition: 250ms ease-in-out;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.not-scaled-logo{
+  width: 100px;
+  height: 100px;
+  transition: 250ms ease-in-out;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.hover-icon:hover{
+  transform: scale(1.05);
+  transition: 250ms ease-in-out;
+}
+.clear-hover:hover {
+  transform: scale(1.1);
+  color: #97241e ;
+  transition: 250ms ease-in-out; 
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
