--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ body,
   @apply text-text-color;
 }
 
+
+
 .common-product-style {
   @apply text-salat-10 border px-4 py-2 min-w-[143px] text-center font-normal text-lg ;
 
@@ -91,6 +93,6 @@ link {
 
 .carousel-button-group{
   position: absolute;
-  bottom: 65%;
+  top: 150px;
   
 }
