--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,9 @@ body,
 
 
 
-/* .common-product-style {
-  @apply text-salat-10 border px-4 py-2 min-w-[143px] text-center font-normal text-lg ;
-
-  /* &:hover {
-    @apply bg-salat-10 text-salat-50 ;
-  } */
-/* } */ 
+/* img {
+ max-width: 100%;
+} */
 link {
   text-decoration: none;
   background-color: #f7faecd2;
@@ -198,7 +194,77 @@ top: 0; */
    background-color: #BFD087;
    margin-left: -20%;
  }
+.square-contact-mobile{
+  max-width: 320px;
+  height: 200px;
+  background-color: #BFD087;
+}
 
+.square-contact-tablet{
+  width: 209px;
+  height: 357px;
+  margin: 0 auto;
+   margin-left: -40%; 
+  background-color: #BFD087;
+}
+
+.square-contact-desktop{
+  width: 153px;
+  height: 357px;
+  margin-left: -45%;
+  background-color: #BFD087;
+}
+
+.contactImg-mobile{
+  position: absolute;
+  top: -40px;
+   left: 50%; 
+   max-width: 529px;
+  transform: translateX(-50%);
+}
+
+.contactImg-desktop{
+  position: absolute;
+  width: 100%;
+  top: -40px;
+  left: 20%;
+  transform: translateX(-50%);
+}
+
+.contact-info-mobile{
+ 
+     padding: 20px; 
+     width: 320px;
+    
+ 
+}
+
+.contact-info-tablet{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+align-items: center;
+     padding: 20px; 
+    /* text-align: center; */
+     margin-top: -25%; 
+  margin-left: -3%;
+    width: 393px;
+    height: 400px;
+ 
+}
+
+.contact-info-desktop{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+align-items: center;
+     padding: 40px; 
+     margin-top: 0;
+  margin-right: -25%;
+    width: 377px;
+    height: 424px;
+ 
+}
 
 .backdrop-class{
   position: fixed;
